--- a/portfolio/contact.html
+++ b/portfolio/contact.html
@@ -2,22 +2,62 @@
 <!--
   Name: Jon Casurella
   Date Created: 01/11/2020
-  Most recent revision:01/12/2020
+  Most recent revision:01/17/2020
 -->
 <html lang="en">
   <head>
     <title>Contact Me</title>
+    <link href="styles/main.css" rel="stylesheet" type="text/css" />
+    <style>
+    label, fieldset{
+        font-size: 1.1em;
+    }
+    input[type=text] {
+      border: 2px solid #0d1f2d;
+      width: 50%;
+      padding: 8px 8px;
+      margin: 12px 0;
+      box-sizing: border-box;
+      font-size: 1.1em;
+    }
+    fieldset {
+      background-color: #fef9ff;
+      width: 100%;
+      padding: 12px 20px;
+      margin: 12px 0;
+      box-sizing: border-box;
+    }
+    input[type=submit] {
+    font-size: 1.2em;
+    background-color: #546a7b;
+    color: #fef9ff;
+    padding: 4px 8px;
+    }
+    input[type=submit]:hover {
+    background-color: #f2eded;
+    color: #546a7b;
+    }
+    textarea {
+    width: 100%;
+    height: 200px;
+    padding: 12px 20px;
+    margin: 12px 0;
+    box-sizing: border-box;
+    border: 2px solid #0d1f2d;
+    border-radius: 3px;
+    background-color: #fff;
+    resize: none;
+    }
+    </style>
   </head>
-
   <body>
     <header>
       <h1>Contact Me</h1>
+    </header>
     <nav>
-      <hr />
       <p><a href="index.html">Home</a></p>
+      <div class="clear-float"></div>
     </nav>
-    <hr />
-  </header>
   <Section>
     <h2>Information Request</h2>
     <form action="submit.html" method="post">
@@ -52,13 +92,11 @@
       </fieldset>
       <label for="info">Additional Information</label><br />
       <textarea id="info" name="info"></textarea><br />
-      <input type="submit" name="submit" value="Submit">
-
+      <input type="submit" name="submit" value="Submit"><br />
   </section>
-
+  <br />
     <footer>
-      <hr />
-
+      <p>&copy; 2020 Jon Casurella. All rights reserved.</p>
     </footer>
   </body>
 </html>
