--- a/Restaurant Site/contact.html
+++ b/Restaurant Site/contact.html
@@ -2,50 +2,141 @@
 <!--
   Name: Jon Casurella
   Date Created: 01/12/2020
-  Most recent revision:
+  Most recent revision: 01/24/2019
 -->
 <html lang="en">
   <head>
+    <meta chartset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title>Contact Us</title>
+      <script type="text/JavaScript" src="formValidation.js"></script>
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="styles/restaurantStyles.css" rel="stylesheet" type="text/css" />
+    <style>
+    #required {
+      font-weight: bold;
+    }
+    input[type=text], input[type=email] {
+      width: 100%;
+      border: 2px solid #0d1f2d;
+      padding: 8px 8px;
+      margin: 12px 0;
+      box-sizing: border-box;
+      font-size: 1.1em;
+    }
+    input[type=checkbox] {
+      padding-right: 20px
+    }
+    fieldset {
+      width: 100%;
+      padding: 12px 20px;
+      margin: 12px 0;
+    }
+    button[type=submit] {
+    font-size: 1.2em;
+    background-color: #B22222;
+    color: #fef9ff;
+    padding: 4px 8px;
+    }
+    button[type=submit]:hover {
+    background-color: #fef9ff;
+    color: #B22222;
+    }
+    textarea {
+    width: 100%;
+    height: 200px;
+    padding: 12px 20px;
+    margin: 12px 0;
+    box-sizing: border-box;
+    border: 2px solid #0d1f2d;
+    border-radius: 3px;
+    background-color: #fff;
+    resize: none;
+    }
+    select {
+      border: 2px solid #0d1f2d;
+      width: 100%;
+      padding: 8px 8px;
+      margin: 12px 0;
+      box-sizing: border-box;
+    }
+    </style>
   </head>
   <body>
     <header>
       <h1>Casurella's</h1>
+      <div id="news"><h6>We are opening a new location in Minneapolis!</h6></div>
+    </header>
     <nav>
-      <hr />
-      <p><a href="home.html">Home</a></p>
-      <p><a href="menu.html">Menu</a></p>
-      <p><a href="contact.html">Contact Us</a></p>
+      <div class="row">
+      <p><a class="btn badge-pill" href="home.html"><i class="fa fa-home"></i></a></p>
+      <p><a class="btn badge-pill" href="menu.html">Menu</a></p>
+      <p><a class="btn badge-pill" href="contact.html">Contact Us</a></p>
+    </div>
     </nav>
-    <hr />
-  </header>
-  <Section>
-    <h2>Information Request</h2>
-    <form action="submit.html" method="post">
-      <label for="Name">Name:</label>
-      <input type="text" id="Name" name="Name"><br />
-      <label for="Email">Email:</label>
-      <input type="text" id="Email" name="Email"><br />
-      <label for="phone">Phone:</label>
-      <input type="text" id="phone" name="phone"><br />
-      <label for="Inquiry">Reason for Inquiry:</label>
+    <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <h3>We're opening a new location!</h3>
+    </div>
+    <div class="carousel-item">
+      <h3>We're rolling out our seasonal menu, with special options for this season.</h3>
+    </div>
+    <div class="carousel-item">
+      <h3>The Drink of the Month is SG Special Brew.</h3>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<br />
+<noscript>This site is best viewed with JavaScript enabled!</noscript>
+<div class="container">
+  <div class="row justify-content-center">
+    <form name="contact" onclick="return validateItems();">
+      <div class="form-group">
+      <label id=required for="Name">Name:</label>
+      <input type="text" class="form-control" id="Name" name="Name">
+      </div>
+      <div class="form-group">
+      <label id=required for="Email">Email:</label>
+      <input type="email" id="Email" name="Email">
+      </div>
+      <div class="form-group">
+      <label id=required for="phone">Phone:</label>
+      <input type="text" id="phone" name="phone">
+      </div>
+      <label id=required for="Inquiry">Reason for Inquiry:</label><br />
       <select id="Inquiry" name="Inquiry">
         <option value="default" selected>Catering</option>
         <option value="PrivateParty">Private Party</option>
         <option value="Feedback">Feedback</option>
         <option value="Other">Other</option>
-      </select><br />
+      </select><br /><br/>
       <label for="info">Additional Information:</label>
       <textarea id="info" name="info"></textarea><br />
       <fieldset>
-        <legend>Have you been to the restaurant?</legend><br />
+        <legend>Have you been to the restaurant?</legend>
         <input type="radio" id="choice1" name="BeenHereBefore" value="no">
-        <label for="choice1">No</label><br />
+        <label for="choice1">No</label>
         <input type="radio" id="choice2" name="BeenHereBefore" value="yes">
-        <label for="choice2">Yes</label><br />
+        <label for="choice2">Yes</label>
       </fieldset>
       <fieldset>
-        <legend>Best days to contact you:</legend><br />
+        <legend>Best days to contact you:</legend>
         <input type="checkbox" id="Monday" name="Day" value="Monday">
         <label for="Monday">M</label>
         <input type="checkbox" id="Tuesday" name="Day" value="Tuesday">
@@ -57,14 +148,21 @@
         <input type="checkbox" id="Friday" name="Day" value="Friday">
         <label for="Friday">F</label>
       </fieldset>
-      <input type="submit" name="submit" value="Send Request">
-
-  </section>
-
+      <div class="text-center">
+        <div class="col-lg-12">
+      <button type="submit" id="submitButton" class="btn btn-default">Submit</button>
+    </div>
+    </div>
+</form>
+</div>
+</div>
+  <br />
     <footer>
-      <hr />
       <h3>167 Grand Ave, St. Paul, MN, 55102</h3>
       <h3>(651) 867-5309</h3>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 </html>
