--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -2,11 +2,12 @@
 <!--
   Name: Jon Casurella
   Date Created: 01/11/2020
-  Most Recent revision:
+  Most Recent revision:01/17/2020
 -->
 <html lang="en">
   <head>
     <title>Projects</title>
+    <link href="styles/main.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
@@ -15,11 +16,12 @@
     </header>
 
     <nav>
-
+      <p><a href="index.html">Home</a></p>
+      <div class="clear-float"></div>
     </nav>
 
     <footer>
-
+      <p>&copy; 2020 Jon Casurella. All rights reserved.</p>
     </footer>
   </body>
 </html>
